libqt6c/src/libqjsonvalue.hpp

typedef struct QJsonArray QJsonArray;
typedef struct QJsonObject QJsonObject;
typedef struct QJsonValue QJsonValue;
typedef struct QJsonValueConstRef QJsonValueConstRef;
typedef struct QJsonValueRef QJsonValueRef;
typedef struct QVariant QVariant;
int QJsonValue_Type(const QJsonValue* self);
QJsonValueConstRef* QJsonValueConstRef_new(const QJsonValueConstRef* other);
QJsonValueConstRef* QJsonValueConstRef_new2(const QJsonValueConstRef* param1);
QVariant* QJsonValueConstRef_ToVariant(const QJsonValueConstRef* self);
int QJsonValueConstRef_Type(const QJsonValueConstRef* self);
bool QJsonValueConstRef_IsNull(const QJsonValueConstRef* self);
bool QJsonValueConstRef_IsBool(const QJsonValueConstRef* self);
bool QJsonValueConstRef_IsDouble(const QJsonValueConstRef* self);
bool QJsonValueConstRef_IsString(const QJsonValueConstRef* self);
bool QJsonValueConstRef_IsArray(const QJsonValueConstRef* self);
bool QJsonValueConstRef_IsObject(const QJsonValueConstRef* self);
bool QJsonValueConstRef_IsUndefined(const QJsonValueConstRef* self);
bool QJsonValueConstRef_ToBool(const QJsonValueConstRef* self);
int QJsonValueConstRef_ToInt(const QJsonValueConstRef* self);
long long QJsonValueConstRef_ToInteger(const QJsonValueConstRef* self);
double QJsonValueConstRef_ToDouble(const QJsonValueConstRef* self);
libqt_string QJsonValueConstRef_ToString(const QJsonValueConstRef* self);
QJsonArray* QJsonValueConstRef_ToArray(const QJsonValueConstRef* self);
QJsonObject* QJsonValueConstRef_ToObject(const QJsonValueConstRef* self);
QJsonValue* QJsonValueConstRef_OperatorSubscript3(const QJsonValueConstRef* self, ptrdiff_t i);
bool QJsonValueConstRef_OperatorEqual(const QJsonValueConstRef* self, const QJsonValue* other);
bool QJsonValueConstRef_OperatorNotEqual(const QJsonValueConstRef* self, const QJsonValue* other);
bool QJsonValueConstRef_ToBool1(const QJsonValueConstRef* self, bool defaultValue);
int QJsonValueConstRef_ToInt1(const QJsonValueConstRef* self, int defaultValue);
long long QJsonValueConstRef_ToInteger1(const QJsonValueConstRef* self, long long defaultValue);
double QJsonValueConstRef_ToDouble1(const QJsonValueConstRef* self, double defaultValue);
libqt_string QJsonValueConstRef_ToString1(const QJsonValueConstRef* self, const libqt_string defaultValue);
void QJsonValueConstRef_Delete(QJsonValueConstRef* self);
QJsonValueRef* QJsonValueRef_new(const QJsonValueRef* other);
QJsonValueRef* QJsonValueRef_new2(const QJsonValueRef* param1);
QJsonValueRef* QJsonValueRef_new3(QJsonArray* array, ptrdiff_t idx);
QJsonValueRef* QJsonValueRef_new4(QJsonObject* object, ptrdiff_t idx);
void QJsonValueRef_OperatorAssign(QJsonValueRef* self, const QJsonValue* val);
void QJsonValueRef_OperatorAssign2(QJsonValueRef* self, const QJsonValueRef* val);
QVariant* QJsonValueRef_ToVariant(const QJsonValueRef* self);
int QJsonValueRef_Type(const QJsonValueRef* self);
bool QJsonValueRef_IsNull(const QJsonValueRef* self);
bool QJsonValueRef_IsBool(const QJsonValueRef* self);
bool QJsonValueRef_IsDouble(const QJsonValueRef* self);
bool QJsonValueRef_IsString(const QJsonValueRef* self);
bool QJsonValueRef_IsArray(const QJsonValueRef* self);
bool QJsonValueRef_IsObject(const QJsonValueRef* self);
bool QJsonValueRef_IsUndefined(const QJsonValueRef* self);
bool QJsonValueRef_ToBool(const QJsonValueRef* self);
int QJsonValueRef_ToInt(const QJsonValueRef* self);
long long QJsonValueRef_ToInteger(const QJsonValueRef* self);
double QJsonValueRef_ToDouble(const QJsonValueRef* self);
libqt_string QJsonValueRef_ToString(const QJsonValueRef* self);
QJsonArray* QJsonValueRef_ToArray(const QJsonValueRef* self);
QJsonObject* QJsonValueRef_ToObject(const QJsonValueRef* self);
QJsonValue* QJsonValueRef_OperatorSubscript3(const QJsonValueRef* self, ptrdiff_t i);
bool QJsonValueRef_OperatorEqual(const QJsonValueRef* self, const QJsonValue* other);
bool QJsonValueRef_OperatorNotEqual(const QJsonValueRef* self, const QJsonValue* other);
bool QJsonValueRef_ToBool1(const QJsonValueRef* self, bool defaultValue);
int QJsonValueRef_ToInt1(const QJsonValueRef* self, int defaultValue);
long long QJsonValueRef_ToInteger1(const QJsonValueRef* self, long long defaultValue);
double QJsonValueRef_ToDouble1(const QJsonValueRef* self, double defaultValue);
libqt_string QJsonValueRef_ToString1(const QJsonValueRef* self, const libqt_string defaultValue);
void QJsonValueRef_Delete(QJsonValueRef* self);