QtBeef/src/Qt/qjsonvalue.bf

extension CQt
{
	[LinkName("QJsonValueConstRef_new")]
	public static extern QJsonValueConstRef_Ptr* QJsonValueConstRef_new(QJsonValueConstRef_Ptr* other);
	[LinkName("QJsonValueConstRef_new2")]
	public static extern QJsonValueConstRef_Ptr* QJsonValueConstRef_new2(QJsonValueConstRef_Ptr* param1);
	[LinkName("QJsonValueConstRef_Delete")]
	public static extern void QJsonValueConstRef_Delete(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_ToQjsonvalue")]
	public static extern QJsonValue_Ptr QJsonValueConstRef_ToQjsonvalue(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_ToVariant")]
	public static extern QVariant_Ptr QJsonValueConstRef_ToVariant(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_Type")]
	public static extern QJsonValue_Type QJsonValueConstRef_Type(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_IsNull")]
	public static extern bool QJsonValueConstRef_IsNull(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_IsBool")]
	public static extern bool QJsonValueConstRef_IsBool(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_IsDouble")]
	public static extern bool QJsonValueConstRef_IsDouble(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_IsString")]
	public static extern bool QJsonValueConstRef_IsString(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_IsArray")]
	public static extern bool QJsonValueConstRef_IsArray(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_IsObject")]
	public static extern bool QJsonValueConstRef_IsObject(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_IsUndefined")]
	public static extern bool QJsonValueConstRef_IsUndefined(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_ToBool")]
	public static extern bool QJsonValueConstRef_ToBool(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_ToInt")]
	public static extern c_int QJsonValueConstRef_ToInt(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_ToInteger")]
	public static extern c_longlong QJsonValueConstRef_ToInteger(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_ToDouble")]
	public static extern double QJsonValueConstRef_ToDouble(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_ToString")]
	public static extern libqt_string QJsonValueConstRef_ToString(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_ToArray")]
	public static extern QJsonArray_Ptr QJsonValueConstRef_ToArray(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_ToObject")]
	public static extern QJsonObject_Ptr QJsonValueConstRef_ToObject(QJsonValueConstRef_Ptr* self);
	[LinkName("QJsonValueConstRef_OperatorSubscript3")]
	public static extern QJsonValue_Ptr QJsonValueConstRef_OperatorSubscript3(QJsonValueConstRef_Ptr* self, void* i);
	[LinkName("QJsonValueConstRef_OperatorEqual")]
	public static extern bool QJsonValueConstRef_OperatorEqual(QJsonValueConstRef_Ptr* self, QJsonValue_Ptr* other);
	[LinkName("QJsonValueConstRef_OperatorNotEqual")]
	public static extern bool QJsonValueConstRef_OperatorNotEqual(QJsonValueConstRef_Ptr* self, QJsonValue_Ptr* other);
	[LinkName("QJsonValueConstRef_ToBool1")]
	public static extern bool QJsonValueConstRef_ToBool1(QJsonValueConstRef_Ptr* self, bool defaultValue);
	[LinkName("QJsonValueConstRef_ToInt1")]
	public static extern c_int QJsonValueConstRef_ToInt1(QJsonValueConstRef_Ptr* self, c_int defaultValue);
	[LinkName("QJsonValueConstRef_ToInteger1")]
	public static extern c_longlong QJsonValueConstRef_ToInteger1(QJsonValueConstRef_Ptr* self, c_longlong defaultValue);
	[LinkName("QJsonValueConstRef_ToDouble1")]
	public static extern double QJsonValueConstRef_ToDouble1(QJsonValueConstRef_Ptr* self, double defaultValue);
	[LinkName("QJsonValueConstRef_ToString1")]
	public static extern libqt_string QJsonValueConstRef_ToString1(QJsonValueConstRef_Ptr* self, libqt_string* defaultValue);
}
class QJsonValueConstRef
{
	private QJsonValueConstRef_Ptr* ptr;
	public this(QJsonValueConstRef_Ptr* other)
	{
		this.ptr = CQt.QJsonValueConstRef_new(other);
	}
	public ~this()
	{
		CQt.QJsonValueConstRef_Delete(this.ptr);
	}
	public QVariant_Ptr ToVariant()
	{
		return CQt.QJsonValueConstRef_ToVariant(this.ptr);
	}
	public QJsonValue_Type Type()
	{
		return CQt.QJsonValueConstRef_Type(this.ptr);
	}
	public bool IsNull()
	{
		return CQt.QJsonValueConstRef_IsNull(this.ptr);
	}
	public bool IsBool()
	{
		return CQt.QJsonValueConstRef_IsBool(this.ptr);
	}
	public bool IsDouble()
	{
		return CQt.QJsonValueConstRef_IsDouble(this.ptr);
	}
	public bool IsString()
	{
		return CQt.QJsonValueConstRef_IsString(this.ptr);
	}
	public bool IsArray()
	{
		return CQt.QJsonValueConstRef_IsArray(this.ptr);
	}
	public bool IsObject()
	{
		return CQt.QJsonValueConstRef_IsObject(this.ptr);
	}
	public bool IsUndefined()
	{
		return CQt.QJsonValueConstRef_IsUndefined(this.ptr);
	}
	public bool ToBool()
	{
		return CQt.QJsonValueConstRef_ToBool(this.ptr);
	}
	public c_int ToInt()
	{
		return CQt.QJsonValueConstRef_ToInt(this.ptr);
	}
	public c_longlong ToInteger()
	{
		return CQt.QJsonValueConstRef_ToInteger(this.ptr);
	}
	public double ToDouble()
	{
		return CQt.QJsonValueConstRef_ToDouble(this.ptr);
	}
	public libqt_string ToString()
	{
		return CQt.QJsonValueConstRef_ToString(this.ptr);
	}
	public QJsonArray_Ptr ToArray()
	{
		return CQt.QJsonValueConstRef_ToArray(this.ptr);
	}
	public QJsonObject_Ptr ToObject()
	{
		return CQt.QJsonValueConstRef_ToObject(this.ptr);
	}
	public QJsonValue_Ptr OperatorSubscript3(void* i)
	{
		return CQt.QJsonValueConstRef_OperatorSubscript3(this.ptr, i);
	}
	public bool ToBool1(bool defaultValue)
	{
		return CQt.QJsonValueConstRef_ToBool1(this.ptr, defaultValue);
	}
	public c_int ToInt1(c_int defaultValue)
	{
		return CQt.QJsonValueConstRef_ToInt1(this.ptr, defaultValue);
	}
	public c_longlong ToInteger1(c_longlong defaultValue)
	{
		return CQt.QJsonValueConstRef_ToInteger1(this.ptr, defaultValue);
	}
	public double ToDouble1(double defaultValue)
	{
		return CQt.QJsonValueConstRef_ToDouble1(this.ptr, defaultValue);
	}
	public libqt_string ToString1(libqt_string* defaultValue)
	{
		return CQt.QJsonValueConstRef_ToString1(this.ptr, defaultValue);
	}
}
interface IQJsonValueConstRef
{
	public QVariant ToVariant();
	public QJsonValue_Type Type();
	public bool IsNull();
	public bool IsBool();
	public bool IsDouble();
	public bool IsString();
	public bool IsArray();
	public bool IsObject();
	public bool IsUndefined();
	public bool ToBool();
	public c_int ToInt();
	public c_longlong ToInteger();
	public double ToDouble();
	public libqt_string ToString();
	public QJsonArray ToArray();
	public QJsonObject ToObject();
	public QJsonValue OperatorSubscript3();
	public bool ToBool1();
	public c_int ToInt1();
	public c_longlong ToInteger1();
	public double ToDouble1();
	public libqt_string ToString1();
}
// --------------------------------------------------------------
// QJsonValueRef
// --------------------------------------------------------------
[CRepr]
struct QJsonValueRef_Ptr: void
{
}
extension CQt
{
	[LinkName("QJsonValueRef_new")]
	public static extern QJsonValueRef_Ptr* QJsonValueRef_new(QJsonValueRef_Ptr* other);
	[LinkName("QJsonValueRef_new2")]
	public static extern QJsonValueRef_Ptr* QJsonValueRef_new2(QJsonValueRef_Ptr* param1);
	[LinkName("QJsonValueRef_new3")]
	public static extern QJsonValueRef_Ptr* QJsonValueRef_new3(QJsonArray_Ptr* array, void* idx);
	[LinkName("QJsonValueRef_new4")]
	public static extern QJsonValueRef_Ptr* QJsonValueRef_new4(QJsonObject_Ptr* object, void* idx);
	[LinkName("QJsonValueRef_Delete")]
	public static extern void QJsonValueRef_Delete(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_OperatorAssign")]
	public static extern void QJsonValueRef_OperatorAssign(QJsonValueRef_Ptr* self, QJsonValue_Ptr* val);
	[LinkName("QJsonValueRef_OperatorAssign2")]
	public static extern void QJsonValueRef_OperatorAssign2(QJsonValueRef_Ptr* self, QJsonValueRef_Ptr* val);
	[LinkName("QJsonValueRef_ToQjsonvalue")]
	public static extern QJsonValue_Ptr QJsonValueRef_ToQjsonvalue(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_ToVariant")]
	public static extern QVariant_Ptr QJsonValueRef_ToVariant(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_Type")]
	public static extern QJsonValue_Type QJsonValueRef_Type(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_IsNull")]
	public static extern bool QJsonValueRef_IsNull(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_IsBool")]
	public static extern bool QJsonValueRef_IsBool(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_IsDouble")]
	public static extern bool QJsonValueRef_IsDouble(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_IsString")]
	public static extern bool QJsonValueRef_IsString(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_IsArray")]
	public static extern bool QJsonValueRef_IsArray(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_IsObject")]
	public static extern bool QJsonValueRef_IsObject(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_IsUndefined")]
	public static extern bool QJsonValueRef_IsUndefined(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_ToBool")]
	public static extern bool QJsonValueRef_ToBool(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_ToInt")]
	public static extern c_int QJsonValueRef_ToInt(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_ToInteger")]
	public static extern c_longlong QJsonValueRef_ToInteger(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_ToDouble")]
	public static extern double QJsonValueRef_ToDouble(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_ToString")]
	public static extern libqt_string QJsonValueRef_ToString(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_ToArray")]
	public static extern QJsonArray_Ptr QJsonValueRef_ToArray(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_ToObject")]
	public static extern QJsonObject_Ptr QJsonValueRef_ToObject(QJsonValueRef_Ptr* self);
	[LinkName("QJsonValueRef_OperatorSubscript3")]
	public static extern QJsonValue_Ptr QJsonValueRef_OperatorSubscript3(QJsonValueRef_Ptr* self, void* i);
	[LinkName("QJsonValueRef_OperatorEqual")]
	public static extern bool QJsonValueRef_OperatorEqual(QJsonValueRef_Ptr* self, QJsonValue_Ptr* other);
	[LinkName("QJsonValueRef_OperatorNotEqual")]
	public static extern bool QJsonValueRef_OperatorNotEqual(QJsonValueRef_Ptr* self, QJsonValue_Ptr* other);
	[LinkName("QJsonValueRef_ToBool1")]
	public static extern bool QJsonValueRef_ToBool1(QJsonValueRef_Ptr* self, bool defaultValue);
	[LinkName("QJsonValueRef_ToInt1")]
	public static extern c_int QJsonValueRef_ToInt1(QJsonValueRef_Ptr* self, c_int defaultValue);
	[LinkName("QJsonValueRef_ToInteger1")]
	public static extern c_longlong QJsonValueRef_ToInteger1(QJsonValueRef_Ptr* self, c_longlong defaultValue);
	[LinkName("QJsonValueRef_ToDouble1")]
	public static extern double QJsonValueRef_ToDouble1(QJsonValueRef_Ptr* self, double defaultValue);
	[LinkName("QJsonValueRef_ToString1")]
	public static extern libqt_string QJsonValueRef_ToString1(QJsonValueRef_Ptr* self, libqt_string* defaultValue);
}
